# AutoProjectManagement

./: .dockerignore  .env.example  .git-credentials-template  .gitignore  CLI_DASHBOARD_GUIDE.md  CODE_HEADER_TEMPLATE.py  CODE_REVIEW_CHECKLIST.md  CODE_REVIEW_CHECKLIST_PHASED.md  Dashboard_Implementation_Plan.md  Dashboard_Implementation_Status.md  GITHUB_AUTH_SETUP.md  INDEX.md  ImplementedProjectManagementProcesses.md  MANIFEST.in  NOTIFICATION_SETUP_GUIDE.md  PERFORMANCE_OPTIMIZATION_GUIDE.md  PLAN_SCOPE_QUALITY_AUTOMATION.md  PROJECT_STRUCTURE_REORGANIZATION_PLAN.md  README.md  README_fa.md  REALTIME_IMPLEMENTATION_GUIDE.md  TASK_DEPENDENCY_IMPLEMENTATION_PLAN.md  TODO.md  TODO_AUDIT_IMPLEMENTATION.md  TODO_AUTOMATION.md  TODO_FINAL.md  TODO_GITHUB_AUDIT_IMPLEMENTATION.md  TODO_GITHUB_INTEGRATION.md  TODO_GIT_FIX.md  TODO_IMPLEMENTATION_PLAN.md  TODO_IMPLEMENTATION_TRACKER.md  TODO_TRACKING.md  TODO_Test.md  TODO_UPDATED.md  TODO_WBS_ENHANCEMENT.md  TODO_auth_models_progress.md  TODO_auth_models_tests.md  TODO_final.md  TODO_updated.md  auth_models_test_progress.md  (+67 more)
.auto_project/: requirements.txt
.auto_project_data/: projects.json  tasks.json
Docs/: AutoProjectManagement_Detailed_Documentation.md  Documentation_Implementation_Plan.md  Documentation_Master_Checklist_Detailed.md  README_AUTO_FILE_WATCHER_SETUP.md  System_Overview.md  Technical_Architecture.md  advanced_dashboard_commands.md  auth_models_test_progress_updated.md
autoprojectmanagement/: REORGANIZATION_COMPLETED.md  REORGANIZATION_MAPPING.md  __init__.py  auto_runner.py  cli.py  cli_dashboard.py  dashboard.css  dashboard.html  dashboard.js  dashboard_clean.css  demo_persistence.py  docker_setup.py  migrate_reorganization.py  setup_auto_environment.py  vscode_extension.py  vscode_extension_status_bar.py
config/: api.yaml  backup.yaml  database.yaml
deploy/: .placeholder
requirements/: base.txt  dev.txt
scripts/: debug_websocket.py  fix_module_imports.py  one-command-deploy.sh  run_test_debug.py  run_test_with_output.py  run_tests.bat
services/: wiki_page_mapper.py  wiki_sync_service.py
tests/: README.md  __init__.py  conftest.py  debug_test.py  pytest.ini  run_audit_test.py  run_comprehensive_tests.py  run_tests.py  simple_test.py  test_app.py  test_auth_complete.py  test_auth_comprehensive.py  test_final_demo.py  (+10 more)
(+988 files in other folders)
