[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "autoprojectmanagement"
version = "1.0.0"
description = "Automated project management system for software development workflows"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "AutoProjectManagement Team", email = "team@autoprojectmanagement.com"}
]
keywords = ["project-management", "automation", "software-development", "cli"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Project Management",
    "Topic :: Utilities",
]

dependencies = [
    "requests>=2.25.0",
    "PyGithub>=1.55",
    "click>=8.0.0",
    "colorama>=0.4.4",
    "python-dateutil>=2.8.0",
    "pytz>=2021.1",
    "typing-extensions>=4.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0",
    "pytest-cov>=2.12",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.910",
    "pre-commit>=2.15",
]

[project.urls]
Homepage = "https://github.com/autoprojectmanagement/autoprojectmanagement"
Repository = "https://github.com/autoprojectmanagement/autoprojectmanagement"
Issues = "https://github.com/autoprojectmanagement/autoprojectmanagement/issues"

[project.scripts]
apm = "autoprojectmanagement.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["autoprojectmanagement*"]

[tool.setuptools.package-data]
"autoprojectmanagement" = ["templates/*", "config/*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=autoprojectmanagement --cov-report=html --cov-report=term-missing"
